feat: quiz POST et PUT
