# static/open-api-specification.yaml
@@ -196,8 +196,35 @@ paths:
                 type: array
                 items:
                   type: object
-                  $ref: '#/components/schemas/ObjectQuizz'
-#              example: [test.user, other.user]
+                  $ref: '#/components/schemas/ObjectQuiz'
+    post:
+      summary: Create a new quiz
+      description: Create a quiz, in the database. quiz_id is auto generated
+      operationId: postQuizHandler
+      tags:
+        - authenticated
+        - quizzes
+      security:
+        - XApiKeyAuth: []
+      requestBody:
+        description: The quizz to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ObjectQuiz'
+            example:
+              title: "QCM de test"
+              description: "Un QCM supplémentaire"
+              open: false
+      responses:
+        '201':
+          description: Content created, returns the quiz'id 
+          content:
+            application/json:
+              schema: 
+                type: integer
+                example: 42
 
 
 components:
@@ -299,18 +326,16 @@ components:
           type: string
           example: user
 
-    ObjectQuizz:
+    ObjectQuiz:
       type: object
       required:
         - quiz_id
-        - created_at
         - title
         - description
         - owner_id
-        - questions_number
-        - questions_ids
       properties:
         quiz_id:
+          description: value is auto generated by the database
           type: integer
           example: 1
         created_at:
@@ -319,7 +344,7 @@ components:
           example: "2020-03-11T09:56:12.372Z"
         title:
           type: string
-          example: QCM LIFAP5 \#1
+          example: "QCM LIFAP5 #1"
         description:
           type: string
           example: Des questions de JS et lambda calcul
